--- a/Installation/guides/flatpak.html
+++ b/Installation/guides/flatpak.html
@@ -74,7 +74,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../../Home/index.html"><strong aria-hidden="true">1.</strong> Home</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Home/faq.html"><strong aria-hidden="true">1.1.</strong> FAQ</a></li></ol></li><li class="chapter-item expanded "><a href="../../Requirements/index.html"><strong aria-hidden="true">2.</strong> Requirements</a></li><li class="chapter-item expanded "><a href="../../Installation/index.html"><strong aria-hidden="true">3.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Installation/guides/flatpak.html" class="active"><strong aria-hidden="true">3.1.</strong> Installing from Flatpak</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/package.html"><strong aria-hidden="true">3.2.</strong> Installing from package</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/source.html"><strong aria-hidden="true">3.3.</strong> Installing from source</a></li></ol></li><li class="chapter-item expanded "><a href="../../Configuration/index.html"><strong aria-hidden="true">4.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Configuration/tips-and-tricks/index.html"><strong aria-hidden="true">4.1.</strong> Tips and tricks</a></li></ol></li><li class="chapter-item expanded "><a href="../../Contributing/index.html"><strong aria-hidden="true">5.</strong> Contributing</a></li><li class="chapter-item expanded "><a href="../../Troubleshooting/index.html"><strong aria-hidden="true">6.</strong> Troubleshooting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Troubleshooting/winehq.html"><strong aria-hidden="true">6.1.</strong> Reporting issues to WineHQ</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../../Home/index.html"><strong aria-hidden="true">1.</strong> Home</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Home/faq.html"><strong aria-hidden="true">1.1.</strong> FAQ</a></li></ol></li><li class="chapter-item expanded "><a href="../../Requirements/index.html"><strong aria-hidden="true">2.</strong> Requirements</a></li><li class="chapter-item expanded "><a href="../../Installation/index.html"><strong aria-hidden="true">3.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Installation/guides/flatpak.html" class="active"><strong aria-hidden="true">3.1.</strong> Installing from Flatpak</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/package.html"><strong aria-hidden="true">3.2.</strong> Installing from package</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/source.html"><strong aria-hidden="true">3.3.</strong> Installing from source</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/snap.html"><strong aria-hidden="true">3.4.</strong> Installing from Snap</a></li></ol></li><li class="chapter-item expanded "><a href="../../Configuration/index.html"><strong aria-hidden="true">4.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Configuration/tips-and-tricks/index.html"><strong aria-hidden="true">4.1.</strong> Tips and tricks</a></li></ol></li><li class="chapter-item expanded "><a href="../../Contributing/index.html"><strong aria-hidden="true">5.</strong> Contributing</a></li><li class="chapter-item expanded "><a href="../../Troubleshooting/index.html"><strong aria-hidden="true">6.</strong> Troubleshooting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Troubleshooting/winehq.html"><strong aria-hidden="true">6.1.</strong> Reporting issues to WineHQ</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -137,13 +137,16 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="installation-from-flatpak"><a class="header" href="#installation-from-flatpak">Installation from Flatpak</a></h1>
-<p>Vinegar's Flatpak can be found <a href="https://flathub.org/apps/details/org.vinegarhq.Vinegar">here</a>. </p>
-<p>Installing it manually from a terminal:</p>
-<pre><code>flatpak install flathub org.vinegarhq.Vinegar
+<p>Vinegar can be found on <a href="https://flathub.org/apps/org.vinegarhq.Vinegar">Flathub</a>:</p>
+<p><a href="https://flathub.org/apps/org.vinegarhq.Vinegar"><img width="180" alt="Download on Flathub" src="https://dl.flathub.org/assets/badges/flathub-badge-en.png"/></a></p>
+<h3 id="using-the-terminal"><a class="header" href="#using-the-terminal">Using the terminal</a></h3>
+<p>If installation of the Flatpak using a GUI isn't preferable, this may be done using the terminal.</p>
+<p><strong>To install:</strong></p>
+<pre><code class="language-sh">flatpak install flathub org.vinegarhq.Vinegar
 flatpak run org.vinegarhq.Vinegar
 </code></pre>
-<p>To uninstall manually from a terminal:</p>
-<pre><code>flatpak uninstall --delete-data org.vinegarhq.Vinegar
+<p><strong>To uninstall:</strong></p>
+<pre><code class="language-sh">flatpak uninstall --delete-data org.vinegarhq.Vinegar
 </code></pre>
 
                     </main>
