--- a/Installation/guides/package.html
+++ b/Installation/guides/package.html
@@ -74,7 +74,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../../Home/index.html"><strong aria-hidden="true">1.</strong> Home</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Home/faq.html"><strong aria-hidden="true">1.1.</strong> FAQ</a></li></ol></li><li class="chapter-item expanded "><a href="../../Requirements/index.html"><strong aria-hidden="true">2.</strong> Requirements</a></li><li class="chapter-item expanded "><a href="../../Installation/index.html"><strong aria-hidden="true">3.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Installation/guides/flatpak.html"><strong aria-hidden="true">3.1.</strong> Installing from Flatpak</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/package.html" class="active"><strong aria-hidden="true">3.2.</strong> Installing from package</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/source.html"><strong aria-hidden="true">3.3.</strong> Installing from source</a></li></ol></li><li class="chapter-item expanded "><a href="../../Configuration/index.html"><strong aria-hidden="true">4.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Configuration/tips-and-tricks/index.html"><strong aria-hidden="true">4.1.</strong> Tips and tricks</a></li></ol></li><li class="chapter-item expanded "><a href="../../Contributing/index.html"><strong aria-hidden="true">5.</strong> Contributing</a></li><li class="chapter-item expanded "><a href="../../Troubleshooting/index.html"><strong aria-hidden="true">6.</strong> Troubleshooting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Troubleshooting/winehq.html"><strong aria-hidden="true">6.1.</strong> Reporting issues to WineHQ</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../../Home/index.html"><strong aria-hidden="true">1.</strong> Home</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Home/faq.html"><strong aria-hidden="true">1.1.</strong> FAQ</a></li></ol></li><li class="chapter-item expanded "><a href="../../Requirements/index.html"><strong aria-hidden="true">2.</strong> Requirements</a></li><li class="chapter-item expanded "><a href="../../Installation/index.html"><strong aria-hidden="true">3.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Installation/guides/flatpak.html"><strong aria-hidden="true">3.1.</strong> Installing from Flatpak</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/package.html" class="active"><strong aria-hidden="true">3.2.</strong> Installing from package</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/source.html"><strong aria-hidden="true">3.3.</strong> Installing from source</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/snap.html"><strong aria-hidden="true">3.4.</strong> Installing from Snap</a></li></ol></li><li class="chapter-item expanded "><a href="../../Configuration/index.html"><strong aria-hidden="true">4.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Configuration/tips-and-tricks/index.html"><strong aria-hidden="true">4.1.</strong> Tips and tricks</a></li></ol></li><li class="chapter-item expanded "><a href="../../Contributing/index.html"><strong aria-hidden="true">5.</strong> Contributing</a></li><li class="chapter-item expanded "><a href="../../Troubleshooting/index.html"><strong aria-hidden="true">6.</strong> Troubleshooting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Troubleshooting/winehq.html"><strong aria-hidden="true">6.1.</strong> Reporting issues to WineHQ</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -137,18 +137,22 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="installation-from-your-package-manager"><a class="header" href="#installation-from-your-package-manager">Installation from your package manager</a></h1>
-<h3 id="alpine-linux"><a class="header" href="#alpine-linux">Alpine linux</a></h3>
-<p>If you are using Alpine Linux Edge with the testing repo enabled (more info <a href="https://wiki.alpinelinux.org/wiki/Repositories#Edge">here</a> you can install the package by simply running the following with root privileges:</p>
-<pre><code class="language-sh">apk add vinegar
-</code></pre>
-<h3 id="arch-linux-or-derivatives-aur"><a class="header" href="#arch-linux-or-derivatives-aur">Arch Linux or derivatives (AUR)</a></h3>
+<p>The Vinegar community hosts a couple distribution-specific packages to make native installation easier.</p>
+<h3 id="arch-linux-and-derivatives-aur"><a class="header" href="#arch-linux-and-derivatives-aur">Arch Linux and derivatives (AUR)</a></h3>
+<p><a href="https://aur.archlinux.org/packages/vinegar"><img src="https://img.shields.io/aur/version/vinegar?label=AUR" alt="AUR Package" /></a></p>
 <p>To install Vinegar, run the following commands:</p>
 <pre><code class="language-sh">git clone https://aur.archlinux.org/vinegar.git
 cd vinegar
 makepkg -si
 </code></pre>
-<p>Alternatively install <code>vinegar</code> with a aur helper</p>
+<p>Alternatively install <code>vinegar</code> with an AUR helper.</p>
+<h3 id="fedora-copr"><a class="header" href="#fedora-copr">Fedora (COPR)</a></h3>
+<p><a href="https://copr.fedorainfracloud.org/coprs/thegu5/vinegar/"><img src="https://img.shields.io/badge/dynamic/json?color=50a4db&amp;label=Fedora%20COPR&amp;query=builds.latest.source_package.version&amp;url=https%3A%2F%2Fcopr.fedorainfracloud.org%2Fapi_3%2Fpackage%3Fownername%3Dthegu5%26projectname%3Dvinegar%26packagename%3Dvinegar%26with_latest_build%3DTrue" alt="COPR Package" /></a></p>
+<pre><code class="language-sh"># dnf copr enable thegu5/vinegar
+# dnf install vinegar
+</code></pre>
 <h3 id="gentoo"><a class="header" href="#gentoo">Gentoo</a></h3>
+<p><a href="https://github.com/vinegarhq/ebuild"><img src="https://img.shields.io/badge/Gentoo-ebuild-6e56af" alt="Gentoo Package" /></a></p>
 <p>Firstly, make sure the repository module for eselect is installed:</p>
 <pre><code class="language-sh">emerge app-eselect/eselect-repository
 </code></pre>
@@ -162,7 +166,13 @@ emaint sync
 <p>Alternatively, you can use the live ebuild by creating a <code>/etc/portage/package.accept_keywords/vinegar</code> file with the following content:</p>
 <pre><code>games-util/vinegar **
 </code></pre>
+<h3 id="alpine-linux"><a class="header" href="#alpine-linux">Alpine Linux</a></h3>
+<p><a href="https://pkgs.alpinelinux.org/package/edge/testing/x86_64/vinegar"><img src="https://repology.org/badge/version-for-repo/alpine_edge/vinegar.svg?header=Alpine%20Linux%20Edge" alt="Alpine Linux Edge" /></a></p>
+<p>Vinegar's Alpine package resides within the <a href="https://wiki.alpinelinux.org/wiki/Repositories#Edge">Edge testing repository</a>, see more on how to set it up <a href="https://wiki.alpinelinux.org/wiki/Repositories#Managing_repositories">here</a></p>
+<pre><code class="language-sh"># apk add vinegar
+</code></pre>
 <h3 id="source-mage"><a class="header" href="#source-mage">Source Mage</a></h3>
+<p><a href="https://github.com/sourcemage/grimoire-z-rejected/tree/master/z-games/vinegar"><img src="https://img.shields.io/badge/Source%20Mage-spell-fe0000" alt="Source Mage Package" /></a></p>
 <p>First, make sure the games grimoire is added:</p>
 <pre><code class="language-sh">scribe add games
 </code></pre>
