--- a/Installation/guides/snap.html
+++ b/Installation/guides/snap.html
@@ -3,32 +3,32 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Home - Vinegar</title>
+        <title>Installing from Snap - Vinegar</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="The documentation of the Vinegar project, which makes Roblox on Linux more convenient.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
-        <link rel="icon" href="../favicon.svg">
-        <link rel="shortcut icon" href="../favicon.png">
-        <link rel="stylesheet" href="../css/variables.css">
-        <link rel="stylesheet" href="../css/general.css">
-        <link rel="stylesheet" href="../css/chrome.css">
+        <link rel="icon" href="../../favicon.svg">
+        <link rel="shortcut icon" href="../../favicon.png">
+        <link rel="stylesheet" href="../../css/variables.css">
+        <link rel="stylesheet" href="../../css/general.css">
+        <link rel="stylesheet" href="../../css/chrome.css">
         <!-- Fonts -->
-        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="../fonts/fonts.css">
+        <link rel="stylesheet" href="../../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../../fonts/fonts.css">
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../highlight.css">
-        <link rel="stylesheet" href="../tomorrow-night.css">
-        <link rel="stylesheet" href="../ayu-highlight.css">
+        <link rel="stylesheet" href="../../highlight.css">
+        <link rel="stylesheet" href="../../tomorrow-night.css">
+        <link rel="stylesheet" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
     </head>
     <body>
         <!-- Provide site root to javascript -->
         <script type="text/javascript">
-            var path_to_root = "../";
+            var path_to_root = "../../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "coal" : "light";
         </script>
 
@@ -74,7 +74,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../Home/index.html" class="active"><strong aria-hidden="true">1.</strong> Home</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Home/faq.html"><strong aria-hidden="true">1.1.</strong> FAQ</a></li></ol></li><li class="chapter-item expanded "><a href="../Requirements/index.html"><strong aria-hidden="true">2.</strong> Requirements</a></li><li class="chapter-item expanded "><a href="../Installation/index.html"><strong aria-hidden="true">3.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Installation/guides/flatpak.html"><strong aria-hidden="true">3.1.</strong> Installing from Flatpak</a></li><li class="chapter-item expanded "><a href="../Installation/guides/package.html"><strong aria-hidden="true">3.2.</strong> Installing from package</a></li><li class="chapter-item expanded "><a href="../Installation/guides/source.html"><strong aria-hidden="true">3.3.</strong> Installing from source</a></li><li class="chapter-item expanded "><a href="../Installation/guides/snap.html"><strong aria-hidden="true">3.4.</strong> Installing from Snap</a></li></ol></li><li class="chapter-item expanded "><a href="../Configuration/index.html"><strong aria-hidden="true">4.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Configuration/tips-and-tricks/index.html"><strong aria-hidden="true">4.1.</strong> Tips and tricks</a></li></ol></li><li class="chapter-item expanded "><a href="../Contributing/index.html"><strong aria-hidden="true">5.</strong> Contributing</a></li><li class="chapter-item expanded "><a href="../Troubleshooting/index.html"><strong aria-hidden="true">6.</strong> Troubleshooting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Troubleshooting/winehq.html"><strong aria-hidden="true">6.1.</strong> Reporting issues to WineHQ</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../../Home/index.html"><strong aria-hidden="true">1.</strong> Home</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Home/faq.html"><strong aria-hidden="true">1.1.</strong> FAQ</a></li></ol></li><li class="chapter-item expanded "><a href="../../Requirements/index.html"><strong aria-hidden="true">2.</strong> Requirements</a></li><li class="chapter-item expanded "><a href="../../Installation/index.html"><strong aria-hidden="true">3.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Installation/guides/flatpak.html"><strong aria-hidden="true">3.1.</strong> Installing from Flatpak</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/package.html"><strong aria-hidden="true">3.2.</strong> Installing from package</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/source.html"><strong aria-hidden="true">3.3.</strong> Installing from source</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/snap.html" class="active"><strong aria-hidden="true">3.4.</strong> Installing from Snap</a></li></ol></li><li class="chapter-item expanded "><a href="../../Configuration/index.html"><strong aria-hidden="true">4.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Configuration/tips-and-tricks/index.html"><strong aria-hidden="true">4.1.</strong> Tips and tricks</a></li></ol></li><li class="chapter-item expanded "><a href="../../Contributing/index.html"><strong aria-hidden="true">5.</strong> Contributing</a></li><li class="chapter-item expanded "><a href="../../Troubleshooting/index.html"><strong aria-hidden="true">6.</strong> Troubleshooting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Troubleshooting/winehq.html"><strong aria-hidden="true">6.1.</strong> Reporting issues to WineHQ</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -109,7 +109,7 @@
                         <a href="https://github.com/vinegarhq/vinegar" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/vinegarhq/vinegarhq.github.io/edit/main/src/Home/index.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/vinegarhq/vinegarhq.github.io/edit/main/src/Installation/guides/snap.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
                     </div>
@@ -136,25 +136,18 @@
 
                 <div id="content" class="content">
                     <main>
-                        <p align="center">
-  <img style="max-width: 30%" src="/favicon.svg">
-</p>
-<h2 id="welcome-to-the-documentation-of-the-vinegar-project"><a class="header" href="#welcome-to-the-documentation-of-the-vinegar-project">Welcome to the documentation of the Vinegar project!</a></h2>
-<ul>
-<li>Vinegar is a fast, minimal, and robust bootstrapper for Roblox Player and Roblox Studio that has many ease-of-use features.</li>
-<li>The software and documentation are both open source, and can be accessed <a href="https://github.com/vinegarhq">on GitHub</a>.</li>
-<li>There is no graphical configuration interface for Vinegar at this time.</li>
-<li>Vinegar is an alternative to <a href="https://brinkervii.gitlab.io/grapejuice/">Grapejuice</a>, designed for advanced Linux users.</li>
-</ul>
-<p>The Discord server for Vinegar can be found <a href="https://discord.gg/dzdzZ6Pps2">here</a>.</p>
-<hr />
-<p><em>Roblox® is a registered Roblox Corporation trademark. VinegarHQ is not affiliated with Roblox Corporation.</em></p>
+                        <h1 id="installation-from-snap"><a class="header" href="#installation-from-snap">Installation from Snap</a></h1>
+<p>Vinegar can be found on <a href="https://snapcraft.io/vinegar">Snapcraft</a>:</p>
+<p><a href="https://snapcraft.io/vinegar"><img width="180" alt="Get it from the Snap Store" src="https://raw.githubusercontent.com/snapcore/snap-store-badges/master/EN/%5BEN%5D-snap-store-black-uneditable.svg"/></a></p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="next" href="../Home/faq.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="prev" href="../../Installation/guides/source.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
+                            <a rel="next" href="../../Configuration/index.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
@@ -163,7 +156,10 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="next" href="../Home/faq.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="prev" href="../../Installation/guides/source.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
+                    <a rel="next" href="../../Configuration/index.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -173,12 +169,12 @@
         <script type="text/javascript">
             window.playground_copyable = true;
         </script>
-        <script src="../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../searcher.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../book.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../../mark.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../../searcher.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../../highlight.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../../book.js" type="text/javascript" charset="utf-8"></script>
 
         <!-- Custom JS scripts -->
     </body>
